Allt klart för CSS tasksen

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,13 @@
 
 
 
-    <div id="longImagediv">
-        <h1 class="ourHeader">Welcome to Nonexistant Burgers</h1>
-
+    <div id="longImagediv" >
         <img src="https://as1.ftcdn.net/v2/jpg/03/02/41/48/1000_F_302414819_juA2QCzXIICStqJOUHQicECan4WKZvN9.jpg" id="longImage">
+        <div class="centerLongImageText">
+            <h1 class="ourHeader">Welcome to Nonexistant Burgers</h1>
+        </div>
+
+
 
     </div>
 
@@ -40,8 +43,8 @@
 
 
 
-        <div class="burgerMenu welcomeArea welcomingText"> <!--our entire burger meun -->
-            <div style="display: inline-block"> <!-- fire burger div -->
+        <div class="burgerMenu welcomeArea welcomingText wrapper"> <!--our entire burger menu -->
+            <div class="box fire"> <!-- fire burger div -->
                 <p>
                     <strong>The fire burger </strong> </p>
                 <p>
@@ -56,7 +59,7 @@
                 </ul>
             </div>
 
-            <div style="display: inline-block"> <!-- fresh burger div -->
+            <div class="box dank"> <!-- dank burger div -->
                 <p>
                     <strong>The dank burger </strong>
                 </p>
@@ -72,7 +75,7 @@
                 </ul>
             </div>
 
-            <div style="display: inline-block"> <!-- chicken burger div -->
+            <div class="box chickenburger" > <!-- chicken burger div -->
                 <p>
                     <strong>The chicken burger </strong>
                 </p>
