Fixade klass som gör allergiinformation fet. CSS helt klart

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
                 <p>
                     Ingredients:
                 </p>
-                <ul>
+                <ul class="fatText">
                     <li> Avocado</li>
                     <li> Tomato</li>
                 </ul>
@@ -67,7 +67,7 @@
                 <p>
                     Ingredients:
                 </p>
-                <ul>
+                <ul class="fatText">
                     <li> Cheese, dairy</li>
                     <li> Onion</li>
                     <li> Mayonaise, dairy</li>
@@ -84,7 +84,7 @@
                 <p>
                     Ingredients:
                 </p>
-                <ul>
+                <ul class="fatText">
                     <li> Cheese</li>
                     <li> Lettuce</li>
                 </ul>
